kubernetes/apps/default/forgejo/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: forgejo
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Forgejo
    gethomepage.dev/group: Git
    gethomepage.dev/icon: forgejo.svg
    gethomepage.dev/description: Git forge
spec:
  hostnames:
    - forgejo.${SECRET_DOMAIN}
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: forgejo-http
          port: 3000
